# minimal_raytracer

./: CMakeLists.txt  README.md  rt.cpp
